first markup added

--- a/Index.html
+++ b/Index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adacate</title>
+    <title>lesson2</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="#">Adacate</a>
-            <ul>
+            <ul class="header-nav-list">
                 <li>
-                    <a href="#">Home</a>
+                    <a href="#">Live stail</a>
                 </li>
                 <li>
-                    <a href="#">About</a>
+<a href="#">About</a>
                 </li>
                 <li>
                     <a href="#">Service</a>
@@ -31,6 +31,36 @@
             </ul>
         </nav>
     </header>
-    
+    <main>
+        <section>
+        <ul class="hobby-list">
+            <li>
+                <img src="./images/1.png" alt="error img" width="421" height="278">
+                <p>lorem</p>
+                <h3>Lorem ipsum dolor sit amet.</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur hic neque error consequuntur voluptate soluta tempore nam, dignissimos non quisquam ullam eos adipisci officia optio.</p>
+            </li>
+            <li>
+                <img src="./images/2.png" alt="error img" width="421" height="278">
+                <p>lorem</p>
+                <h3>Lorem ipsum dolor sit amet.</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur hic neque error consequuntur voluptate soluta tempore nam, dignissimos non quisquam ullam eos adipisci officia optio.</p>
+            </li>
+            <li>
+                <img src="./images/3.png" alt="error img" width="421" height="278">
+                <p>lorem</p>
+                <h3>Lorem ipsum dolor sit amet.</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur hic neque error consequuntur voluptate soluta tempore nam, dignissimos non quisquam ullam eos adipisci officia optio.</p>
+            </li>
+            <li>
+                <img src="./images/4.png" alt="error img" width="421" height="278">
+                <p>lorem</p>
+                <h3>Lorem ipsum dolor sit amet.</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur hic neque error consequuntur voluptate soluta tempore nam, dignissimos non quisquam ullam eos adipisci officia optio.</p>
+            </li>
+        </ul>
+        <button type="button" class="button">loadmore</button>
+    </section>
+</main>
 </body>
 </html>
